<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:accordion="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/server_url_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/server_url"
                    android:inputType="textUri"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_server_url"
                android:theme="@style/Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_parameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_url_container"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moisture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/moisture_in"
                    android:imeActionLabel="@string/moisture_in"
                    android:inputType="numberDecimal"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/standard_deduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/standard_deduction_in"
                    android:imeActionLabel="@string/standard_deduction_in"
                    android:inputType="numberDecimal"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tare_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tare_weight_in_kg"
                    android:imeActionLabel="@string/tare_weight_in_kg"
                    android:inputType="numberDecimal"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_weighing_params"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/server_url_container"
                android:text="@string/save_weighing_parameters"
                android:theme="@style/Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/plucking_record_mode_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/weight_parameters"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:padding="20dp">

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/record_plucking_one_shot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Switch
                android:id="@+id/one_shot_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_one_shot_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_preference"
                android:theme="@style/Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/flash_mode_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/plucking_record_mode_container"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:padding="20dp">

            <TextView
                android:gravity="center_horizontal"
                android:text="Flash screen on record?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Switch
                android:id="@+id/flash_on_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flash_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/flash_duration_in_seconds"
                    android:imeActionLabel="@string/flash_duration_in_seconds"
                    android:inputType="number"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_flash_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_flash_preference"
                android:theme="@style/Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/print_order_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/flash_mode_container"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:padding="20dp">

            <TextView
                android:gravity="center_horizontal"
                android:text="Print Time-wise?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Switch
                android:id="@+id/time_wise_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_print_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Print Preference"
                android:theme="@style/Button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/export_transaction_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/print_order_container"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_05_rounded"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/export_transactional_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_data"
                android:theme="@style/Button" />

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="gone"
                android:layout_marginTop="18dip"
                android:id="@+id/clear_transactional_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_data"
                android:theme="@style/Button" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>
